# Owl

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt
doc/: Architecture-Core.puml  Architecture.puml  Crypto.puml  Endpoint.puml  Event.puml  Obfuscator.puml  Pipeline.puml  ProxyNode.puml  Rule.puml  Shadowsocks.puml  Socks5.puml
src/: CMakeLists.txt  main.cc
src/Include/: Bound.hpp  BoundFactory.hpp  CliOptions.hpp  Configuration.hpp  Connection.hpp  ConnectionManager.hpp  Controller.hpp  Pipeline.hpp  Policy.hpp  Proxy.hpp  ProxyGroup.hpp  ProxyNode.hpp  Rule.hpp  Server.hpp
src/Include/Bound/: BoundFactory.hpp  Inbound.hpp  Outbound.hpp  Protocol.hpp  (+1 more)
src/Source/: Bound.cc  BoundFactory.cc  CMakeLists.txt  CliOptions.cc  Configuration.cc  Connection.cc  ConnectionManager.cc  Controller.cc  Policy.cc  Proxy.cc  ProxyGroup.cc  ProxyNode.cc  Rule.cc  RuleFactory.cc  Server.cc
src/Source/Bound/: BoundFactory.cc  Inbound.cc  Outbound.cc
src/Source/Bound/Inbound/: Socks5.cc  Socks5Server.cc
src/Source/Bound/Outbound/: Direct.cc  Reject.cc  ShadowsocksClient.cc
src/Source/Bound/Protocol/: Socks5.cc  Socks5Server.cc
src/Source/Bound/Raw/: Direct.cc  Reject.cc
src/Source/Configuration/: ConfigurationGrammar.cc  ConfigurationParser.cc
src/Source/Connection/: ApiConnection.cc  Bound.cc  ConnectionManager.cc  Protocol.cc  Raw.cc  RelayConnection.cc
src/Source/Controller/: GetConfigHandler.cc  Handler.cc  PolicyHandler.cc  PostConfigHandler.cc  RuleHandler.cc  SetSelectedProxyHandler.cc  TrafficHandler.cc
src/Source/Pipeline/: Crypto.cc  Pipelines.cc  SimpleObfsClient.cc  TypeTraits.cc  Utils.cc
src/Source/Pipeline/Crypto/: Aead.cc  Cipher.cc  CryptoFactory.cc  Hkdf.cc  OpensslAead.cc  OpensslStream.cc  Rc4Md5Stream.cc  SodiumAead.cc  SodiumStream.cc  Stream.cc  TypeTraits.cc  Utils.cc
src/Source/Pipeline/SimpleObfsClient/: HttpObfuscator.cc  SimpleObfsClientFactory.cc  TlsObfuscator.cc
src/Source/Proxy/: AutoProxyGroup.cc  BuiltInProxyNode.cc  ExternalProxyNode.cc  PolicyBuilder.cc  ProxyNodeManager.cc  StaticProxyGroup.cc
src/Source/Rule/: DomainKeywordRule.cc  DomainSuffixRule.cc  FinalRule.cc  IpCidrRule.cc  RuleFactory.cc  RuleManager.cc
src/Source/Util/: DelayTest.cc  DelayTester.cc  Delegate.cc  EnableSharedInstance.cc  Endpoint.cc  Event.cc  HttpClient.cc  TimeoutEvent.cc  Url.cc
test/: CMakeLists.txt  main.cc
test/Source/: ConfigurationParser-Policy.txt  ConfigurationParser-Proxy.txt  ConfigurationParser-Rule.txt  ConfigurationParserTest.cc  CryptoTest.cc  DelayTestTest.cc  EndpointTest.cc  EventTest.cc  FinalActionTest.cc  FunctionPtrTest.cc  GoogleTest.cc  HKDFTest.cc  HttpClientTest.cc  RuleTest.cc
(+65 files in other folders)
